--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,113 @@
-/* Add CSS styling here */
+@import url('https://fonts.googleapis.com/css2?family=Peddana&family=Sansita+Swashed:wght@400;900&display=swap');
+ header{
+    background-color:lightgray;
+    font-size: 2.5rem;
+   
+    display: flex;
+    justify-content: center;
+    
+}
+h1{
+    color: white
+}
+nav{
+    background-color:lightgray;
+    display: flex;
+    justify-content: center;
+    
+    padding-top: 0%;
+    margin: -3% 0% 4% 0%;
+    
+    
+}
+.button{
+    color: teal;
+    padding:10px;
+    text-align: center;
+    display: inline-block;
+    border-radius:12px;
+    
+}
+.main{
+    display: flex;
+    justify-content: center;
+    margin:2%;
+    font-size: 1.2rem;
+    font-family: 'Sansita Swashed', cursive;
+
+}
+h2{
+    display: flex;
+    justify-content: center;
+    font-size: 2rem;
+    margin:-3%;
+    font-family: 'Sansita Swashed', cursive;
+    
+}
+
+.container{
+    display:flex;
+   /* align-content: center;
+    align-items:stretch;
+    width:100%;*/
+    height:500px;
+    font-size: 4rem;
+    color: lavenderblush;
+    justify-content: center;
+    align-items: stretch ;
+    justify-content: space-between;
+
+    
+     
+
+}  
+.item{
+    border:1px solid black;
+    background-color: gray;
+    /*width: 20%;*/
+    height: 100%;
+    font-family: 'Sansita Swashed', cursive;
+    text-align: center;
+
+}
+
+
+footer{
+    
+    background-color: lightgrey ;
+    width: 100%;
+    padding: 5%;
+    margin-top: 5%;
+
+}
+.text{
+    color: navy;
+    font-size: 4rem;
+    background-color: papayawhip;
+    height: 130;
+    display: flex;
+    height: 100%;
+    font-family: 'Sansita Swashed', cursive;
+
+}
+    
+
+img{
+    
+    border-radius: 4px;
+    height: 15%;
+    width: 100%;
+
+    
+
+    
+
+    
+    
+}
+.too{
+    padding: .5%;
+    display: flex;
+    justify-content: right;
+
+}
